# kasa

./: CMakeLists.txt  README.md  avr-gcc.cmake
lib/coreJSON/: jsonFilePaths.cmake
lib/freeRTOS9xx/: freeRTOSFilePaths.cmake
lib/freeRTOS9xx/include/: FreeRTOSConfig.h  inet.h
src/: common.h  input_scanner.c  input_scanner.h  local_io.c  local_io.h  main.c  output_manager.c  output_manager.h  web.c  web.h
